force-app/main/default/objects/portal_my_order__c/portal_my_order__c.object-meta.xml
<CustomObject>
    <label>My Order</label>
    <nameField>
        <label>My Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>