force-app/main/default/objects/portal_my_order__c/fields/Art_Approved__c.field-meta.xml
<CustomField>
    <fullName>Art_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Art Approved</label>
    <type>Checkbox</type>
</CustomField>