force-app/main/default/objects/portal_my_order__c/fields/Art_Current_Time__c.field-meta.xml
<CustomField>
    <fullName>Art_Current_Time__c</fullName>
    <formula>IF( 
OR(
ISPICKVAL(Art_Priority__c,&quot;Revision&quot;),
ISPICKVAL(Art_Priority__c,&quot;Rush Revision&quot;),
ISPICKVAL(Art_Priority__c,&quot;CSI Revision&quot;),
ISPICKVAL(Art_Priority__c,&quot;National Revision&quot;)
)
, Art_Revision_Est_Time__c , Art_Est_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Art Current Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>