force-app/main/default/objects/portal_my_order__c/fields/Art_Priority__c.field-meta.xml
<CustomField>
    <fullName>Art_Priority__c</fullName>
    <label>Art Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Rush</fullName>
            </value>
            <value>
                <fullName>!Rush Today!</fullName>
            </value>
            <value>
                <fullName>Rush Revision</fullName>
            </value>
            <value>
                <fullName>CSI</fullName>
            </value>
            <value>
                <fullName>CSI Revision</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>National Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>