force-app/main/default/objects/portal_my_order__c/fields/Art_Proof_Detail__c.field-meta.xml
<CustomField>
    <fullName>Art_Proof_Detail__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/n/Art_Proof_Detail?c__Id=&quot;+Id+ &quot;&amp;c__source=pending_revision&quot;,&quot;Art Proofing Detail&quot;,&apos;_blank&apos;)</formula>
    <label>Art Proof Detail</label>
    <type>Text</type>
</CustomField>