force-app/main/default/objects/portal_my_order__c/fields/Art_Revision_Est_Time__c.field-meta.xml
<CustomField>
    <fullName>Art_Revision_Est_Time__c</fullName>
    <label>Art Revision Est. Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>