force-app/main/default/objects/portal_my_order__c/fields/Art_Scheduled_Upload__c.field-meta.xml
<CustomField>
    <fullName>Art_Scheduled_Upload__c</fullName>
    <description>Date scheduled to originally upload Art</description>
    <label>Art Scheduled Upload</label>
    <type>Date</type>
</CustomField>