force-app/main/default/objects/portal_my_order__c/fields/Art_Sent_To_Production__c.field-meta.xml
<CustomField>
    <fullName>Art_Sent_To_Production__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Art Sent To Production</label>
    <type>Checkbox</type>
</CustomField>