force-app/main/default/objects/portal_my_order__c/fields/Art_Status__c.field-meta.xml
<CustomField>
    <fullName>Art_Status__c</fullName>
    <label>Art Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned Out</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Revision In Progress</fullName>
            </value>
            <value>
                <fullName>Pause Art</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Waiting on PA</fullName>
            </value>
            <value>
                <fullName>Ashore Revision</fullName>
            </value>
            <value>
                <fullName>Portal Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>