force-app/main/default/objects/portal_my_order__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>My_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>