force-app/main/default/objects/portal_my_order__c/fields/Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Attention_To__c</fullName>
    <label>Attention To:</label>
    <length>200</length>
    <type>Text</type>
</CustomField>