force-app/main/default/objects/portal_my_order__c/fields/Billed_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Billed_Shipping__c</fullName>
    <label>Billed Shipping $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>