force-app/main/default/objects/portal_my_order__c/fields/Client_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_First_Name__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client First Name</label>
    <type>Text</type>
</CustomField>