force-app/main/default/objects/portal_my_order__c/fields/Client_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Last_Name__c</fullName>
    <formula>Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Last Name</label>
    <type>Text</type>
</CustomField>