force-app/main/default/objects/portal_my_order__c/fields/Client_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Owner_ID__c</fullName>
    <label>Client Owner ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>