force-app/main/default/objects/portal_my_order__c/fields/Colors_on_Other__c.field-meta.xml
<CustomField>
    <fullName>Colors_on_Other__c</fullName>
    <label>Colors on Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>