force-app/main/default/objects/portal_my_order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>My Orders</relationshipLabel>
    <relationshipName>My_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>