force-app/main/default/objects/portal_my_order__c/fields/Date_Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Quote_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date Quote Sent</label>
    <type>Checkbox</type>
</CustomField>