force-app/main/default/objects/portal_my_order__c/fields/Deco_Type__c.field-meta.xml
<CustomField>
    <fullName>Deco_Type__c</fullName>
    <label>Deco Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen Printing</fullName>
            </value>
            <value>
                <fullName>Promo</fullName>
            </value>
            <value>
                <fullName>Build your Brand Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>