force-app/main/default/objects/portal_my_order__c/fields/exclude_from_portal_emails_2__c.field-meta.xml
<CustomField>
    <fullName>exclude_from_portal_emails_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>exclude from portal emails 2</label>
    <type>Checkbox</type>
</CustomField>