force-app/main/default/objects/portal_my_order__c/fields/Garment_Colors__c.field-meta.xml
<CustomField>
    <fullName>Garment_Colors__c</fullName>
    <label>Garment Color(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>