force-app/main/default/objects/portal_my_order__c/fields/In_Revision__c.field-meta.xml
<CustomField>
    <fullName>In_Revision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Revision</label>
    <type>Checkbox</type>
</CustomField>