force-app/main/default/objects/portal_my_order__c/fields/Internal_Revision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Revision_Notes__c</fullName>
    <label>Internal Revision Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>