force-app/main/default/objects/portal_my_order__c/fields/Latest_Last_View_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Last_View_Date__c</fullName>
    <label>Latest Last View Date</label>
    <type>Date</type>
</CustomField>