force-app/main/default/objects/portal_my_order__c/fields/Must_Have_Date__c.field-meta.xml
<CustomField>
    <fullName>Must_Have_Date__c</fullName>
    <label>Must Have Date</label>
    <type>Date</type>
</CustomField>