force-app/main/default/objects/portal_my_order__c/fields/Needs_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Needs_Approval_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Approval Date</label>
    <type>Date</type>
</CustomField>