force-app/main/default/objects/portal_my_order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>My Orders</relationshipLabel>
    <relationshipName>My_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>