force-app/main/default/objects/portal_my_order__c/fields/Opportunity_Owner_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_1__c</fullName>
    <formula>Contact__r.Owner.FirstName+&quot; &quot;+ Contact__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>