force-app/main/default/objects/portal_my_order__c/fields/Product_Types__c.field-meta.xml
<CustomField>
    <fullName>Product_Types__c</fullName>
    <label>Product Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>