force-app/main/default/objects/portal_my_order__c/fields/Production_Stage__c.field-meta.xml
<CustomField>
    <fullName>Production_Stage__c</fullName>
    <label>Production Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled for Production</fullName>
                <default>true</default>
                <label>Scheduled for Production</label>
            </value>
            <value>
                <fullName>Prepped for Print</fullName>
            </value>
            <value>
                <fullName>Printing in Progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Job Complete</fullName>
                <label>Order Complete</label>
            </value>
            <value>
                <fullName>Job Shipped</fullName>
                <label>Order Shipped</label>
            </value>
            <value>
                <fullName>Art Prepared for Print</fullName>
                <isActive>false</isActive>
                <label>Art Prepared for Print</label>
            </value>
            <value>
                <fullName>Garments Staged</fullName>
                <isActive>false</isActive>
                <label>Garments Staged</label>
            </value>
            <value>
                <fullName>Screens Prepared</fullName>
                <isActive>false</isActive>
                <label>Screens Prepared</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>