force-app/main/default/objects/portal_my_order__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TURN INTO PROJECT!!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>