force-app/main/default/objects/portal_my_order__c/fields/Quote_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiration_Date__c</fullName>
    <label>Quote Expiration Date</label>
    <type>Date</type>
</CustomField>