force-app/main/default/objects/portal_my_order__c/fields/Quote_Request__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request__c</fullName>
    <label>Quote Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>