force-app/main/default/objects/portal_my_order__c/fields/Quote_Requested_number_of_items__c.field-meta.xml
<CustomField>
    <fullName>Quote_Requested_number_of_items__c</fullName>
    <label>Quote Requested number of items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>