force-app/main/default/objects/portal_my_order__c/fields/Revision_Needed_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Needed_By_Date__c</fullName>
    <label>Revision Needed By Date</label>
    <type>Date</type>
</CustomField>