force-app/main/default/objects/portal_my_order__c/fields/Ship_Type__c.field-meta.xml
<CustomField>
    <fullName>Ship_Type__c</fullName>
    <label>Ship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>