force-app/main/default/objects/portal_my_order__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Fedex Ground</fullName>
            </value>
            <value>
                <fullName>UPS Ground</fullName>
            </value>
            <value>
                <fullName>Customer Pick Up</fullName>
            </value>
            <value>
                <fullName>Express Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>