force-app/main/default/objects/portal_my_order__c/fields/Shipping_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Geolocation__c</fullName>
    <label>Shipping Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>