force-app/main/default/objects/portal_my_order__c/fields/Shipping_StateProvince__c.field-meta.xml
<CustomField>
    <fullName>Shipping_StateProvince__c</fullName>
    <label>Shipping State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>