force-app/main/default/objects/portal_my_order__c/fields/Shipping_ZipPostal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_ZipPostal_Code__c</fullName>
    <label>Shipping Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>