force-app/main/default/objects/portal_my_order__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote_Request</fullName>
                <default>true</default>
                <label>Quote Request</label>
            </value>
            <value>
                <fullName>Quote Ready</fullName>
            </value>
            <value>
                <fullName>Quote Approved</fullName>
            </value>
            <value>
                <fullName>Art Started</fullName>
            </value>
            <value>
                <fullName>Art Ready</fullName>
            </value>
            <value>
                <fullName>Art Approved</fullName>
            </value>
            <value>
                <fullName>Sizes Submitted</fullName>
            </value>
            <value>
                <fullName>Scheduled for Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>