force-app/main/default/objects/portal_my_order__c/fields/Stage_Art_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Art_Started_Date__c</fullName>
    <description>This date will populate when the stage is moved to &quot;Art Started&quot;</description>
    <label>Stage-Art Started Date</label>
    <type>Date</type>
</CustomField>