force-app/main/default/objects/portal_my_order__c/fields/Submit_Revision_Time__c.field-meta.xml
<CustomField>
    <fullName>Submit_Revision_Time__c</fullName>
    <label>Submit Revision Time</label>
    <type>DateTime</type>
</CustomField>