force-app/main/default/objects/portal_my_order__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>My_Product__c.Total_Price__c</summarizedField>
    <summaryForeignKey>My_Product__c.My_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>