force-app/main/default/objects/portal_my_order__c/recordTypes/Order_Status.recordType-meta.xml
<RecordType>
    <fullName>Order_Status</fullName>
    <active>true</active>
    <label>Order Status</label>
</RecordType>