force-app/main/default/objects/portal_my_order__c/recordTypes/Sent_to_Production.recordType-meta.xml
<RecordType>
    <fullName>Sent_to_Production</fullName>
    <active>true</active>
    <label>Sent to Production</label>
</RecordType>