force-app/main/default/objects/portal_my_order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Art_Proof_Detail__c</columns>
    <columns>Must_Have_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>