force-app/main/default/objects/portal_my_order__c/listViews/Approved_Art.listView-meta.xml
<ListView>
    <fullName>Approved_Art</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Art_Approved__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Owner_1__c</columns>
    <columns>Art_Sent_To_Production__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Art_Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Art_Sent_To_Production__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>portal_my_order__c.Order_Status</value>
    </filters>
    <label>Approved Art!</label>
</ListView>