force-app/main/default/objects/portal_my_order__c/listViews/Completed_Orders.listView-meta.xml
<ListView>
    <fullName>Completed_Orders</fullName>
    <columns>NAME</columns>
    <columns>Must_Have_Date__c</columns>
    <columns>Shipping_Street__c</columns>
    <columns>Shipping_City__c</columns>
    <columns>Shipping_StateProvince__c</columns>
    <columns>Shipping_ZipPostal_Code__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Mine</filterScope>
    <label>Completed Orders</label>
</ListView>