force-app/main/default/objects/portal_my_order__c/listViews/SEARCH.listView-meta.xml
<ListView>
    <fullName>SEARCH</fullName>
    <columns>Submit_Revision_Time__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Art_Proof_Detail__c</columns>
    <columns>Must_Have_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>In_Revision__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Art Started</value>
    </filters>
    <filters>
        <field>Submit_Revision_Time__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>In_Revision__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>SEARCH</label>
</ListView>